--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+alloy = { version = "0.5.2", features = [
+    "full",
+    "node-bindings",
+    "rpc-types-debug",
+    "rpc-types-trace",
+    "json-rpc",
+    "rpc-client",
+    "signer-aws",
+    "signer-keystore",
+    "signer-ledger",
+    "signer-mnemonic",
+    "signer-trezor",
+    "signer-yubihsm",
+    "eips",
+] }
+alloy-primitives = "0.8.12"
+dotenv = "0.15.0"
+serde = "1.0.215"
+tokio = "1.41.1"
